--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -131,6 +131,33 @@ android:orientation="vertical">
                 android:textStyle="bold" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="4dp"
+            android:paddingLeft="25dp">
+
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:src="@drawable/ic_phone" />
+
+            <TextView
+                android:id="@+id/setup_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:inputType="textMultiLine"
+                android:paddingLeft="20dp"
+                android:text="phone No"
+                android:textColorLink="#17b739"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
