--- a/app/src/main/res/layout/blog_list_item.xml
+++ b/app/src/main/res/layout/blog_list_item.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/blog_like_btn"
+                android:id="@+id/blog_call_btn"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
                 android:layout_marginStart="16dp"
@@ -33,7 +33,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/blog_desc"
-                app:srcCompat="@mipmap/action_like_accent" />
+                android:src="@drawable/ic_phone" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/blog_user_image"
@@ -88,17 +88,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/blog_image" />
 
-            <TextView
-                android:id="@+id/blog_like_count"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="Likes"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/blog_like_btn"
-                app:layout_constraintTop_toBottomOf="@+id/blog_desc" />
 
             <TextView
                 android:id="@+id/blog_comment_count"
@@ -123,6 +112,14 @@
                 app:layout_constraintEnd_toStartOf="@+id/blog_comment_count"
                 app:layout_constraintTop_toBottomOf="@+id/blog_desc"
                 app:srcCompat="@mipmap/ic_launcher_donate" />
+
+            <TextView
+                android:id="@+id/blog_phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/blog_call_btn"
+                app:layout_constraintTop_toBottomOf="@+id/blog_desc" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
